--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "A template for a react web project",
   "main": "index.js",
   "scripts": {
-    "webpack": "webpack",
-    "start": "webpack serve",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build:dev": "set NODE_ENV=development && webpack",
+    "build:prod": "set NODE_ENV=production && webpack",
+    "start": "npm run build:dev && webpack serve"
   },
   "repository": {
     "type": "git",
@@ -32,6 +32,7 @@
     "@types/react": "^17.0.21",
     "@types/react-dom": "^17.0.9",
     "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.2.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
